--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "tape tests/navigation.test.js",
+    "test": "eslint -c .eslintrc --no-eslintrc index.j test/*.test.js test/debug/index.js && tape tests/navigation.test.js ",
     "debug-map": "watchify ./tests/debug/index.js -o ./tests/debug/bundle.js -d",
     "docs": "documentation-readme readme.md -s 'API Usage' documentation --format md --output readme.md"
   },
@@ -17,6 +17,7 @@
     "browserify": "^13.0.0",
     "documentation": "^3.0.4",
     "documentation-readme": "^2.1.1",
+    "eslint": "^1.10.3",
     "leaflet-hash": "^0.2.1",
     "mapbox.js": "^2.2.4",
     "tape": "^4.4.0",
