Use only necessary turf modules

--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "eslint -c .eslintrc --no-eslintrc index.j test/*.test.js test/debug/index.js && tape tests/navigation.test.js ",
-    "debug-map": "watchify ./tests/debug/index.js -o ./tests/debug/bundle.js -d",
+    "debug-map": "watchify ./tests/debug/index.js -o 'uglifyjs -cm > ./tests/debug/bundle.js'",
     "docs": "documentation-readme readme.md -s 'API Usage' documentation --format md --output readme.md"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "turf": "^2.0.2"
+    "turf-distance": "^1.1.0",
+    "turf-point-on-line": "^1.0.2"
   },
   "devDependencies": {
     "browserify": "^13.0.0",
@@ -21,6 +22,7 @@
     "leaflet-hash": "^0.2.1",
     "mapbox.js": "^2.2.4",
     "tape": "^4.4.0",
+    "uglifyjs": "^2.4.10",
     "watchify": "^3.7.0"
   }
 }
