--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "eslint -c .eslintrc --no-eslintrc index.j test/*.test.js test/debug/index.js && tape tests/navigation.test.js ",
-    "debug-map": "watchify ./tests/debug/index.js -o 'uglifyjs -cm > ./tests/debug/bundle.js'",
+    "debug-map": "watchify ./tests/debug/index.js -o ./tests/debug/bundle.js",
     "docs": "documentation-readme readme.md -s 'API Usage' documentation --format md --output readme.md"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "turf-distance": "^1.1.0",
+    "turf-line-distance": "^1.0.2",
+    "turf-line-slice": "^1.3.4",
     "turf-point-on-line": "^1.0.2"
   },
   "devDependencies": {
