--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "turf-distance": "^1.1.0",
+    "turf-line-distance": "^1.0.2",
+    "turf-line-slice": "^1.3.4",
     "turf-point-on-line": "^1.0.2"
   },
   "devDependencies": {
