Use distance to see if user completed route

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "eslint -c .eslintrc --no-eslintrc index.j test/*.test.js test/debug/index.js && tape tests/navigation.test.js ",
-    "debug-map": "watchify ./tests/debug/index.js -o 'uglifyjs -cm > ./tests/debug/bundle.js'",
+    "build": "watchify ./tests/debug/index.js -o ./tests/debug/bundle.js",
     "docs": "documentation-readme readme.md -s 'API Usage' documentation --format md --output readme.md"
   },
   "author": "",
@@ -18,11 +18,13 @@
   },
   "devDependencies": {
     "browserify": "^13.0.0",
+    "debounce": "^1.0.0",
     "documentation": "^3.0.4",
     "documentation-readme": "^2.1.1",
     "eslint": "^1.10.3",
     "leaflet-hash": "^0.2.1",
     "mapbox.js": "^2.2.4",
+    "request": "^2.69.0",
     "tape": "^4.4.0",
     "uglifyjs": "^2.4.10",
     "watchify": "^3.7.0"
