--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "eslint -c .eslintrc --no-eslintrc index.j test/*.test.js test/debug/index.js && tape tests/navigation.test.js ",
-    "build": "watchify ./tests/debug/index.js -o ./tests/debug/bundle.js",
+    "build": "browserify ./tests/debug/index.js -o ./tests/debug/bundle.js",
     "docs": "documentation-readme readme.md -s 'API Usage' documentation --format md --output readme.md"
   },
   "author": "",
@@ -25,8 +25,6 @@
     "leaflet-hash": "^0.2.1",
     "mapbox.js": "^2.3.0",
     "request": "^2.69.0",
-    "tape": "^4.4.0",
-    "uglifyjs": "^2.4.10",
-    "watchify": "^3.7.0"
+    "tape": "^4.4.0"
   }
 }
