--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "eslint -c .eslintrc --no-eslintrc index.j test/*.test.js test/debug/index.js && tape tests/navigation.test.js ",
     "docs": "documentation-readme readme.md -s 'API Usage' documentation --format md --output readme.md",
-    "start": "budo tests/debug/index.js:tests/debug/bundle.js --live --dir tests/debug/",
+    "start": "budo tests/debug/index.js:bundle.js --live --dir tests/debug/",
     "build": "browserify ./tests/debug/index.js -o | uglifyjs -c -m > ./tests/debug/bundle.js"
   },
   "author": "",
