--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "turf-distance": "^1.1.0",
     "turf-line-distance": "^1.0.2",
     "turf-line-slice": "^1.3.4",
+    "turf-point": "^2.0.1",
     "turf-point-on-line": "^1.0.2"
   },
   "devDependencies": {
